# location

./: Cargo.toml  Makefile  README.md  addresses.json  addresses_test.json
src/: main.rs
src/domain/address/: mod.rs
src/domain/address/entity/: address_entity.rs  mod.rs
src/domain/address/repository/: address_repository.rs  mod.rs
src/domain/address/service/: address_service.rs  mod.rs
src/domain/address/service/mapper/: address_mapper.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/cli_handler/: cli.rs  mod.rs
src/infrastructure/storage/file/: main.rs  mod.rs
src/tests/: unit_tests.rs
