[package]
name = "location"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"


[[bin]]
name = "location-address"
path = "src/main.rs"